tests/ui/unexpected-in-group.rs
use efg::efg;

#[efg(unix || (windows, wasm))]
struct S;

fn main() {}
